src/test/ui/suggestions/issue-61226.stderr
error[E0423]: expected value, found struct `X`
  --> $DIR/issue-61226.rs:4:18
   |
LL |     let _ = vec![X]; //…
   |                  ^ not a value

error: aborting due to previous error

For more information about this error, try `rustc --explain E0423`.
